--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-  "name": "webfinger-proxy",
-  "module": "index.ts",
-  "type": "module",
-  "devDependencies": {
-    "bun-types": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  }
+    "name": "webfinger-proxy",
+    "module": "index.ts",
+    "type": "module",
+    "devDependencies": {
+        "bun-types": "latest",
+        "prettier": "^3.1.0",
+        "husky": "^8.0.0"
+    },
+    "peerDependencies": {
+        "typescript": "^5.0.0"
+    },
+    "scripts": {
+        "prepare": "husky install",
+        "check-format": "prettier . --check",
+        "format": "prettier . --write"
+    }
 }
