--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "webfinger-proxy",
     "module": "index.ts",
     "type": "module",
+    "license": "GPL-3.0-or-later",
     "devDependencies": {
         "bun-types": "latest",
         "prettier": "^3.1.0",
